--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,2 +1,5 @@
-<!--components/like/index.wxml-->
-<text>components/like/index.wxml</text>
+<!-- components/like/index.wxml -->
+<view bind:tap="onLike" class="container">
+    <image src="{{like?yesSrc:noSrc}}" />
+    <text>{{count}}</text>
+</view>
