--- a/components/classic/movie/index.wxml
+++ b/components/classic/movie/index.wxml
@@ -1,2 +1,5 @@
-<!--components/classic/movie/index.wxml-->
-<text>components/classic/movie/index.wxml</text>
+<view class="classic-container">
+  <image class="classic-img" src="{{ img }}"></image>
+  <image class="tag" src="images/movie@tag.png"></image>
+  <text class="content" >{{ content }}</text>
+</view>
