--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,4 +1,13 @@
-<v-like 
+<view>
+  <v-like 
     count="{{classic.fav_nums}}"
     like="{{classic.like_status}}"
-/>
+  />
+  <v-movie
+    img="{{classic.image}}"
+    content="{{classic.content}}"
+  />
+
+
+
+</view>
