--- a/components/episode/index.wxss
+++ b/components/episode/index.wxss
@@ -1,1 +1,51 @@
 /* components/episode/index.wxss */
+
+.container {
+  height: 60rpx;
+  display: inline-flex;
+  flex-direction: row;
+}
+
+
+.index-container {
+  display: flex;
+  flex-direction: row;
+  /* 保证子元素底部对齐 */
+  align-items: baseline;
+}
+
+.plain {
+  font-size: 32rpx;
+}
+
+.index {
+  font-size: 60rpx;
+  line-height: 60rpx;
+  font-weight: 800;
+  margin-right: 14rpx;
+}
+
+.line {
+  height: 44rpx;
+  margin-right: 14rpx;
+  border-left: 2px solid black;
+
+}
+
+
+.date-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rpx;
+}
+
+.month {
+  font-size: 24rpx;
+  line-height: 24rpx;
+}
+
+.year {
+  font-size: 20rpx;
+}
+
+
