--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,14 +1,20 @@
-<view>
+<view class="header"> 
+  <v-episode
+    class="episode"
+    index="{{classic.index}}"
+  />
+
+
   <v-like 
+    class="like"
     count="{{classic.fav_nums}}"
     like="{{classic.like_status}}"
     bind:like="onLike"
   />
-  <v-movie
+ 
+</view>
+
+ <v-movie
     img="{{classic.image}}"
     content="{{classic.content}}"
   />
-
-
-
-</view>
