--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,4 +1,7 @@
-<view class="header"> 
+<view class="container">
+
+
+  <view class="header"> 
   <v-episode
     class="episode"
     index="{{classic.index}}"
@@ -18,3 +21,16 @@
     img="{{classic.image}}"
     content="{{classic.content}}"
   />
+
+  <v-navi
+    class="navi"
+    title="{{classic.title}}"
+    first="{{first}}"
+    latest="{{latest}}"
+  />
+
+</view>
+
+
+
+ 
