设置navi 自定义事件

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -27,6 +27,8 @@
     title="{{classic.title}}"
     first="{{first}}"
     latest="{{latest}}"
+    bind:left="onNext"
+    bind:right="onPrevious"
   />
 
 </view>
