--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -1,2 +1,8 @@
-<!--components/classic/music/index.wxml-->
-<text>components/classic/music/index.wxml</text>
+<view>
+
+  <image>{{img}}</image>
+  <image>{{playSrc}}</image>
+  <image src="images/music@tag.png"></image>
+  <text>{{content}}</text>
+
+</view>
