独立更新like 组件

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -10,8 +10,8 @@
 
   <v-like 
     class="like"
-    count="{{classic.fav_nums}}"
-    like="{{classic.like_status}}"
+    count="{{ likeCount }}"
+    like="{{ likeStatus }}"
     bind:like="onLike"
   />
  
