--- a/components/classic/movie/index.wxss
+++ b/components/classic/movie/index.wxss
@@ -1,30 +1,1 @@
-/* components/classic/movie/index.wxss */
-
-.classic-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
-
-.classic-img {
-  width: 750rpx;
-  height: 500rpx;
-}
-
-
-.tag {
-  width: 46rpx;
-  height: 142rpx;
-  position: relative;
-  right: 310rpx;
-  bottom: 58rpx;
-}
-
-
-.content {
-  font-size: 36rpx;
-  /* 给他一个最长宽度，保证content的换行效果 */
-  max-width: 550rpx;
-}
+@import "../common.wxss";
