--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -1,8 +1,32 @@
-<view hidden="{{hidden}}">
+<view class="container" hidden="{{hidden}}" >
+    <image 
+      class="classic-img" 
+      src="{{img}}" 
+    />
 
-  <image>{{img}}</image>
-  <image>{{playSrc}}</image>
-  <image src="images/music@tag.png"></image>
-  <text>{{content}}</text>
+    <image 
+      class="player-img" 
+      src="{{playSrc}}" 
+    />
 
+    <image 
+      class="tag" 
+      src="images/music@tag.png" 
+    />
+
+    <text class="content">{{content}}</text>
 </view>
+
+
+
+<!--  <image 
+      class="classic-img {{playing?'rotation':''}}" 
+      src="{{img}}" 
+    /> -->
+
+
+<!--    <image 
+      class="player-img" 
+      bind:tap="onPlay" 
+      src="{{!playing?playSrc:pauseSrc}}" 
+    /> -->
