使用新版音乐播放对象  初步实现播放

--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -5,8 +5,9 @@
     />
 
     <image 
-      class="player-img" 
-      src="{{playSrc}}" 
+      class="player-img"
+      bind:tap="onPlay"  
+      src="{{!playing?playSrc:pauseSrc}}"
     />
 
     <image 
