完成音乐播放动画

--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -1,6 +1,6 @@
 <view class="container" hidden="{{hidden}}" >
     <image 
-      class="classic-img" 
+      class="classic-img {{playing?'rotation':''}}" 
       src="{{img}}" 
     />
 
