--- a/components/book/index.wxml
+++ b/components/book/index.wxml
@@ -1,2 +1,16 @@
-<!--components/book/index.wxml-->
-<text>components/book/index.wxml</text>
+<view class="container">
+    <image src="{{book.image}}"></image>
+    <view class="description">
+        <text class='title'>{{book.title}}</text>
+        <text class='author'>{{book.author}}</text>
+        <view class='foot'>
+            <text class="footer">{{book.fav_nums}}  喜欢</text>
+        </view>
+    </view>
+</view>
+
+
+
+
+<!-- <view bind:tap="onTap" class="container"> -->
+<!-- <view wx:if="{{showLike}}" class='foot'> -->
