--- a/components/tag/index.wxml
+++ b/components/tag/index.wxml
@@ -1,2 +1,3 @@
-<!--components/tag/index.wxml-->
-<text>components/tag/index.wxml</text>
+<view class="container ">
+    <text >{{text}}</text>
+</view>
