--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -5,4 +5,15 @@
         <text class='title'>{{book.title}}</text>
         <text class='author'>{{book.author}}</text>
     </view>
+
+     <view class="sub-container">
+        <text class="headline">短评</text>
+        <view class="comment-container">
+            <block wx:for="{{comments}}" wx:key="content">
+                <v-tag  text="{{item.content}}">
+                    
+                </v-tag>
+            </block>
+        </view>
+    </view>
 </view>
