--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -60,3 +60,14 @@
     margin-right: 15rpx;
     margin-bottom: 10rpx;
 }
+
+.content {
+    text-indent: 58rpx;
+    font-weight: 500;
+}
+
+.num {
+    margin-left: 10rpx;
+    font-size: 22rpx;
+    color: #aaa;
+}
