--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -71,3 +71,12 @@
     font-size: 22rpx;
     color: #aaa;
 }
+
+
+.comment-container>v-tag:nth-child(1)>view {
+    background-color: #fffbdd;
+}
+
+.comment-container>v-tag:nth-child(2)>view {
+    background-color: #eefbff;
+}
