初次使用WXS 测试

--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,3 +1,4 @@
+<wxs src="../../util/filter.wxs" module="util" />
 
 <view class="container">
     <view class="head">
@@ -16,4 +17,10 @@
             </block>
         </view>
     </view>
+
+    <view class="sub-container">
+        <text class="headline">内容简介</text>
+        <text class="content">{{util.format(book.summary)}}</text>
+    </view>
+
 </view>
