--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -20,7 +20,7 @@
 
     <view class="sub-container">
         <text class="headline">内容简介</text>
-        <text class="content">{{util.format(book.summary)}}</text>
+        <text class="content" decode="{{true}}" >{{util.format(book.summary)}}</text>
     </view>
 
 </view>
