--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -10,7 +10,7 @@
      <view class="sub-container">
         <text class="headline">短评</text>
         <view class="comment-container">
-            <block wx:for="{{comments}}" wx:key="content">
+            <block wx:for="{{util.limit(comments, 10)}}"  wx:key="content">
                 <v-tag  tag-class="{{index===0? 'ex-tag1':'' || index===1? 'ex-tag2':''}}" text="{{item.content}}">
                     <text class="num" slot="after">{{'+'+item.nums}}</text>
                 </v-tag>
