--- a/util/filter.wxs
+++ b/util/filter.wxs
@@ -16,8 +16,15 @@ var format = function(text) {
 }
 
 
+// 限制短评出现条数
+var limit = function (array, length) {
+  return array.slice(0, length)
+}
+
+
 
 
 module.exports = {
-  format: format
+  format: format,
+  limit: limit
 }
