--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -94,3 +94,24 @@
 .ex-tag2 {
     background-color: #eefbff !important;
 }
+
+/* 书本信息样式 */
+.detail-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 100rpx;
+    font-size: 28rpx;
+    color: #666;
+}
+
+.vertical {
+    display: flex;
+    flex-direction: column;
+}
+
+.description {
+    color: #999;
+    margin-right: 30rpx;
+}
