--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -43,9 +43,9 @@
         </view>
     </view>
     <!-- 短评 -->
-    <view class="post-container">
+    <view class="post-container" hidden="{{posting}}">
 
-      <view class="post-fake">
+      <view bind:tap="onFakePost" class="post-fake">
           <text>输入短评</text>
       </view>
       
@@ -54,4 +54,26 @@
       </view>
 
     </view>
+
+    <!-- 短评显示后的内容 -->
+    <view class="posting-container" wx:if="{{posting}}">
+      <view class="post-header">
+          <text wx:if="{{comments==true}}">仅可点击标签+1</text>
+          <text wx:else>暂无短评</text>
+          <text bind:tap="onCancel" class="cancel">取消</text>
+      </view>
+      <view class="comment-container">
+          <block wx:for="{{util.limit(comments, 3)}}" wx:key="content">
+              <v-tag 
+                bind:tapping="onPost" 
+                tag-class="{{tool.highlight(index)}}" 
+                text="{{item.content}}"
+                >
+                  <text class="num" slot="after">{{'+'+item.nums}}</text>
+              </v-tag>
+          </block>
+      </view>
+      <input bindconfirm="onPost" class="post" placeholder='短评最多12个字'></input>
+    </view>
+
 </view>
