--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -11,7 +11,7 @@
         <text class="headline">短评</text>
         <view class="comment-container">
             <block wx:for="{{util.limit(comments, 10)}}"  wx:key="content">
-                <v-tag  tag-class="{{index===0? 'ex-tag1':'' || index===1? 'ex-tag2':''}}" text="{{item.content}}">
+                <v-tag  tag-class="{{tool.highlight(index)}}"text="{{item.content}}">
                     <text class="num" slot="after">{{'+'+item.nums}}</text>
                 </v-tag>
             </block>
@@ -77,3 +77,20 @@
     </view>
 
 </view>
+
+
+<wxs module="tool">
+    var highlight = function(index){
+        if(index==0){
+            return 'ex-tag1'
+        }
+        if(index==1){
+            return 'ex-tag2'
+        }
+        return ''
+    }
+
+    module.exports = {
+        highlight:highlight
+    }
+</wxs>
