短评实现 5 提交短评数据 还没优化

--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -64,6 +64,7 @@
       </view>
       <view class="comment-container">
           <block wx:for="{{util.limit(comments, 3)}}" wx:key="content">
+              <!-- 在这里监听自定义事件 -->
               <v-tag 
                 bind:tapping="onPost" 
                 tag-class="{{tool.highlight(index)}}" 
