--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -1,2 +1,26 @@
-<!--components/search/index.wxml-->
-<text>components/search/index.wxml</text>
+
+<view class="container">
+
+  <!-- 搜索组件头部代码 -->
+  <view class="header">
+
+    <view class="search-container">
+
+      <image class="icon" src="images/search.png" />
+
+      <input 
+        placeholder-class='in-bar' 
+        placeholder='书籍名' 
+        class='bar' 
+        auto-focus="true"
+      />
+
+      <image class="cancel-img" src="images/cancel.png" />
+
+    </view>
+
+    <view bind:tap="onCancel" class="cancel" >取消</view>
+
+  </view>
+
+</view>
