搜索组件 热门历史记录

--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -7,7 +7,7 @@
     <view class="search-container">
 
       <image class="icon" src="images/search.png" />
-
+      <!-- auto-focus 自动聚焦 -->
       <input 
         placeholder-class='in-bar' 
         placeholder='书籍名' 
@@ -20,6 +20,28 @@
     </view>
 
     <view bind:tap="onCancel" class="cancel" >取消</view>
+
+  </view>
+
+   <!-- 历史搜索和热门搜索 -->
+   
+   <view>
+    <view class="history">
+      <view class="title">
+        <view class="chunk"></view>
+        <text>历史搜索</text>
+      </view>
+      
+
+    </view>
+    
+    <view class="history hot-search">
+      <view class="title">
+        <view class="chunk"></view>
+        <text>热门搜索</text>
+      </view>
+      
+    </view>
 
   </view>
 
