实现历史搜索显示

--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -32,7 +32,12 @@
         <view class="chunk"></view>
         <text>历史搜索</text>
       </view>
-      
+      <!-- 遍历历史搜索 -->
+      <view class="tags">
+        <block wx:key="" wx:for="{{historyWords}}">
+          <v-tag  text="{{item}}" />
+        </block>
+      </view>
 
     </view>
 
