--- a/components/search/index.wxss
+++ b/components/search/index.wxss
@@ -60,3 +60,87 @@
     height: 28rpx;
     margin-right: 20rpx;
 }
+
+.history {
+    width: 690rpx;
+    margin: 40rpx 0 20rpx 0;
+    display: flex;
+    font-size: 28rpx;
+    margin-top: 160rpx;
+    flex-direction: column;
+}
+
+.hot-search {
+    margin-top: 70rpx;
+}
+
+.title {
+    line-height: 30rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.books-container v-book {
+    margin-bottom: 25rpx;
+}
+
+.books-container {
+    width: 570rpx;
+    margin-top: 100rpx;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0 90rpx 0 90rpx;
+    justify-content: space-between;
+}
+
+.loading {
+    margin: 50rpx 0 50rpx 0;
+}
+
+.loading-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.empty-tip {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+}
+
+.chunk {
+    height: 30rpx;
+    width: 10rpx;
+    background-color: #000;
+    display: inline-block;
+    margin-right: 20rpx;
+}
+
+.tags {
+    /* padding-left:15px; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 24rpx;
+    padding-left: 30rpx;
+    width: 630rpx;
+}
+
+.tags v-tag {
+    margin-right: 20rpx;
+    margin-bottom: 20rpx;
+}
+
+.bar {
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    display: inline-block;
+    height: 68rpx;
+    width: 500rpx;
+    font-size: 28rpx;
+}
