实现热门搜索关键字显示

--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -46,6 +46,12 @@
         <view class="chunk"></view>
         <text>热门搜索</text>
       </view>
+       <!-- 遍历热门搜索 -->
+       <view class="tags">
+        <block wx:key="" wx:for="{{hotWords}}">
+          <v-tag text="{{item}}" />
+        </block>
+      </view>
       
     </view>
 
