搜索组件完善

--- a/components/loading/index.wxml
+++ b/components/loading/index.wxml
@@ -1,2 +1,4 @@
-<!--components/loading/index.wxml-->
-<text>components/loading/index.wxml</text>
+<view class="spinner">
+  <view class="double-bounce1"></view>
+  <view class="double-bounce2"></view>
+</view>
