--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -3,6 +3,24 @@
   <!-- open-data 显示用户头像或昵称等 -->
   <!-- <open-data type="userAvatarUrl" class="avatar avatar-position"/> -->
   
+   <!--将button封装在自定义组件中  -->
+   <v-button 
+    wx:if="{{!authorized}}"  
+    open-type="getUserInfo" 
+    class="avatar-position" 
+    bind:getuserinfo="onGetUserInfo"
+    >
+    <image slot="img" class="avatar" src="/images/my/my.png" />
+  </v-button>
+
+  <!-- 授权后显示 -->
+  <view wx:if="{{authorized}}" class="avatar-container avatar-position">
+    <image src="{{userInfo.avatarUrl}}" class="avatar" />
+    <text>{{userInfo.nickName}}</text>
+  </view>
+
+
+
   <view class="about-container">
     <view class="about-us">
       <image src="/images/my/about.png"/>
@@ -15,12 +33,5 @@
     </view>
   </view>
 
-    <!--将button封装在自定义组件中  -->
-   <v-button  
-    open-type="getUserInfo" 
-    class="avatar-position" 
-    bind:getuserinfo="onGetUserInfo"
-    >
-    <image slot="img" class="avatar" src="/images/my/my.png" />
-  </v-button>
+   
 </view>
