--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,2 +1,4 @@
-<!--pages/about/about.wxml-->
-<text>pages/about/about.wxml</text>
+<image class="about"  />
+ <navigator class="nav" target="miniProgram" app-id="wx8ffc97ad5bcccc89" open-type="navigate">
+ <image class="vendor" src="/images/my/vendor.png"></image>
+ </navigator> 
