--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -22,13 +22,14 @@
 
 
   <view class="about-container">
-    <view class="about-us">
+    <view class="about-us" bind:tap="onJumpToAbout">
       <image src="/images/my/about.png"/>
 
       <text class="description">关于我</text>
     </view>
 
     <view class="about-us">
+      <text class="book-num">{{bookCount}}</text>
       <text class="description">喜欢的书</text>
     </view>
   </view>
